# Labortorio_2_GraficaC

./: CMakeLists.txt  README.md  main.cpp
